MODRS-250: Fix sonarcloud issue